# problems

./: .gitignore  examples.py  pyproject.toml
src/package_dispatcher/: __init__.py  sorter.py
src/package_dispatcher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_sorter.py
