[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "package-dispatcher"
version = "0.1.0"
description = "Sort packages into STANDARD, SPECIAL, or REJECTED stacks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Workspace User" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
